# TileDB-xarray

./: .editorconfig  .flake8  .gitignore  .mypy.ini  CONTRIBUTING.md  HISTORY.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
tests/: conftest.py  test_plugin.py  test_plugin_distributed.py
tiledb/xarray/: entrypoint.py
tools/hooks/: pre-commit.sh
