[metadata]
name = tiledb-xarray
version = 0.1.0
description = TileDB backend for xarray
author = TileDB, Inc.
author_email = help@tiledb.io
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = tiledb, xarray, tiledb-xarray
url = https://github.com/TileDB-Inc/tiledb-xarray
project_urls =
    Documentation = https://docs.tiledb.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development

[options.entry_points]
xarray.backends = tiledb = tiledb.xarray.entrypoint:TileDBBackendEntrypoint

[options]
packages = tiledb.xarray
python_requires = >=3.7
install_requires =
    numpy >= 1.16.5
    setuptools >= 40.4
    tiledb >= 0.8.3
    xarray @ git+https://github.com/pydata/xarray.git

[options.extras_require]
parallel = dask[complete]

[flake8]
ignore = E226,E302,E41,W503,E203,E402
max-line-length = 88
exclude = docs/* ./.*
max-complexity = 10

[mypy]
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-tiledb.*]
ignore_missing_imports = True
[mypy-xarray.*]
ignore_missing_imports = True
[mypy-dask.*]
ignore_missing_imports = True
[mypy-distributed.*]
ignore_missing_imports = True
[mypy-setuptools.*]
ignore_missing_imports = True
